adicionando home e estilo

--- a/home.html
+++ b/home.html
@@ -18,5 +18,20 @@
             <a href="cadastro.html">Cadastrar</a>
         </section>
     </header>
+    <main class="content">
+        <div class="flags">
+            <img src="images/brasil.jpg" alt="bandeira do Brasil" width="200">
+            <p>Brasil</p>
+        </div>
+        <div class="flags">
+            <img src="images/argentina.jpg" alt="bandeira da Argentina" width="200">
+            <p>Argentina</p>
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="rights">
+            <p>@Todos os direitos reservados a Giovanna e Zizau</p>
+        </div>
+    </footer>
 </body>
 </html>
