--- a/home.html
+++ b/home.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="styles/home.css">
     <title>Central da Copa</title>
 </head>
 <body>
     <header class="navBar">
         <section class="navImage">
-            <img src="images/logo_semsite_semfundo (1).png" alt="logo da Flit" width="150">
+            <a href="home.html"><img src="images/logo_semsite_semfundo (1).png" alt="logo da Flit" width="150"></a>
         </section>
         <section class="navPages">
             <a href="home.html">Home</a>
