adicionando link das bandeiras

--- a/cadastro.html
+++ b/cadastro.html
@@ -16,7 +16,7 @@
         </section>
         <section class="navPages">
             <a href="home.html">Home</a>
-            <a href="">Jogos</a>
+            <a href="pages/brasil/index.html">Jogos</a>
             <a href="cadastro.html">Cadastrar</a>
         </section>
     </header>
