--- a/home.html
+++ b/home.html
@@ -14,17 +14,17 @@
         </section>
         <section class="navPages">
             <a href="home.html">Home</a>
-            <a href="">Jogos</a>
+            <a href="pages/brasil/index.html">Jogos</a>
             <a href="cadastro.html">Cadastrar</a>
         </section>
     </header>
     <main class="content">
         <div class="flags">
-            <img src="images/brasil.jpg" alt="bandeira do Brasil" width="200">
+            <a href="pages/brasil/index.html"><img src="images/brasil.jpg" alt="bandeira do Brasil" width="200"></a>
             <p>Brasil</p>
         </div>
         <div class="flags">
-            <img src="images/argentina.jpg" alt="bandeira da Argentina" width="200">
+            <a href="pages/argentina/index.html"><img src="images/argentina.jpg" alt="bandeira da Argentina" width="200"></a>
             <p>Argentina</p>
         </div>
     </main>
