implementação de js no botão da pagina da  argentina

--- a/pages/argentina/index.html
+++ b/pages/argentina/index.html
@@ -33,8 +33,24 @@
     </section>
     <section class="matchResults">
         <div class="groupStage matchBox">
-
+            <h3>Classificatórias</h3>
+            <div id=matchScores>
+                <div class="score">
+                    <span>Argentina X Arábia Saudita</span>
+                    <p>1 X 2</p>
+                </div>
+                <button id="matchButton">Ver Mais</button>
+                <div class="score">
+                    <span>Argentina X México</span>
+                    <p>2 X 0</p>
+                </div>
+                <div class="score">
+                    <span>Argentina X Arábia Saudita</span>
+                    <p>1 X 2</p>
+                </div>
+            </div>
         </div>
     </section>
 </body>
+<script src="dist/index.js"></script>
 </html>
