--- a/pages/argentina/players.html
+++ b/pages/argentina/players.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogadores Argentina</title>
+    <link rel="stylesheet" href="../../styles/argentina.css">
 </head>
 <body>
-    
+    <header class="navBar">
+        <section class="navImage">
+            <a href="../../home.html"><img src="../../images/logo_semsite_semfundo (1).png" alt="logo da Flit" width="150"></a>
+        </section>
+        <section class="navPages">
+            <a href="../../home.html">Home</a>
+            <a href="../brasil/index.html">Jogos</a>
+            <a href="../../cadastro.html">Cadastrar</a>
+        </section>
+    </header>
+    <a class="backButton" href="./index.html">Voltar</a>
 </body>
 </html>
