adicionando detalhes finais da página de jogos: conexão com a api e botão de ver menos

--- a/pages/brasil/index.html
+++ b/pages/brasil/index.html
@@ -35,36 +35,36 @@
     </section>
     <section class="qualifying" id="qualifying">
         <div class="scoreboard"> 
-            <p>Time A x Time B</p><br>
-            <p>4 x 1</p>
+            <p id="teamFirstClassification"></p><br>
+            <p id="scoreFirstClassification"></p>
         </div>
         <div>
             <h1>Classificatórias</h1>
             <button class="buttonMore" id="buttonMore">Ver Mais</button>
             <div class="scoreboard scoreboardHidden" id="scoreboardHidden">
-                <p>Time A x Time B</p><br>
-                <p>4 x 1</p>
+                <p id="teamThirdClassification"></p><br>
+                <p id="scoreThirdClassification"></p>
             </div>
         </div>
         <div class="scoreboard">
-            <p>Time A x Time B</p><br>
-            <p>4 x 1</p>
+            <p id="teamSecondClassification"></p><br>
+            <p id="scoreSecondClassification"></p>
         </div>
     </section>
     <section class="penultimateGame">
         <h1>Oitavas de final</h1>
         <div class="scoreboard"> 
-            <p>Time A x Time B</p><br>
-            <p>4 x 1</p>
+            <p id="teamPenultimateGame"></p><br>
+            <p id="scorePenultimateGame"></p>
         </div>
     </section>
     <section class="lastGame">
         <h1>Quartas de final</h1>
         <div class="scoreboard"> 
-            <p>Time A x Time B</p><br>
-            <p>4 x 1</p>
+            <p id="teamLastGame"></p><br>
+            <p id="scoreLastGame"></p>
         </div>
     </section>
 </body>
-<script src="../../dist/brasil.js"></script>
+<script src="../../dist/src/brasil.js"></script>
 </html>
