criação da função de registrar jogadores na API de jogadores ao clicar no botão da página de cadastro

--- a/cadastro.html
+++ b/cadastro.html
@@ -22,22 +22,22 @@
     </header>
     <form>
         <label for="nationalTeam">Seleção:</label>
-        <input type="text" id="nationalTeam">
+        <input type="text" id="nationalTeam" placeholder="Ex: Brasil">
 
-        <label for="player">Jogador:</label>
-        <input type="text" id="player">
+        <label for="name">Nome:</label>
+        <input type="text" id="name" placeholder="Ex: Neymar">
 
         <label for="age">Idade:</label>
-        <input type="text" id="age">
+        <input type="text" id="age" placeholder="Ex: 30">
 
         <label for="position">Posição:</label>
-        <input type="text" id="position">
+        <input type="text" id="position" placeholder="Ex: Atacante">
 
         <label for="photo">Foto:</label>
-        <input type="text" id="photo">
+        <input type="text" id="photo" placeholder="Ex: url">
 
-        <button>Cadastrar</button>
+        <button id="submit" type="button">Cadastrar</button>
     </form>
 </body>
-
+<script src="./dist/cadastro.js"></script>
 </html>
