--- a/pages/argentina/index.html
+++ b/pages/argentina/index.html
@@ -52,5 +52,5 @@
         </div>
     </section>
 </body>
-<script src="dist/index.js"></script>
+<script src="../../dist/pages/argentina/index.js"></script>
 </html>
