--- a/pages/brasil/index.html
+++ b/pages/brasil/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,12 @@
     <link rel="stylesheet" href="../../styles/brasil.css">
     <title>Jogos da Copa</title>
 </head>
+
 <body>
     <header class="navBar">
         <section class="navImage">
-            <a href="../../home.html"><img src="../../images/logo_semsite_semfundo (1).png" alt="logo da Flit" width="150"></a>
+            <a href="../../home.html"><img src="../../images/logo_semsite_semfundo (1).png" alt="logo da Flit"
+                    width="150"></a>
         </section>
         <section class="navPages">
             <a href="../../home.html">Home</a>
@@ -29,42 +32,37 @@
                 <a href="players.html"><button class="menuButton">Ver Jogadores</button></a>
             </div>
         </section>
-        <section >
+        <section>
             <a href="../argentina/index.html"><button class="menuButton">Próximo</button></a>
         </section>
     </section>
     <section class="qualifying" id="qualifying">
-        <div class="scoreboard"> 
-            <p id="teamFirstClassification"></p><br>
-            <p id="scoreFirstClassification"></p>
-        </div>
-        <div>
+        <div class="title">
             <h1>Classificatórias</h1>
-            <button class="buttonMore" id="buttonMore">Ver Mais</button>
-            <div class="scoreboard scoreboardHidden" id="scoreboardHidden">
-                <p id="teamThirdClassification"></p><br>
-                <p id="scoreThirdClassification"></p>
-            </div>
         </div>
-        <div class="scoreboard">
-            <p id="teamSecondClassification"></p><br>
-            <p id="scoreSecondClassification"></p>
+        <div class="games" id="games">
+         
+                <div>
+                    <button class="buttonMore" id="buttonMore">Ver Mais</button>
+                </div>
+                
         </div>
     </section>
     <section class="penultimateGame">
         <h1>Oitavas de final</h1>
-        <div class="scoreboard"> 
+        <div class="scoreboard">
             <p id="teamPenultimateGame"></p><br>
             <p id="scorePenultimateGame"></p>
         </div>
     </section>
     <section class="lastGame">
         <h1>Quartas de final</h1>
-        <div class="scoreboard"> 
+        <div class="scoreboard">
             <p id="teamLastGame"></p><br>
             <p id="scoreLastGame"></p>
         </div>
     </section>
 </body>
 <script src="../../dist/src/brasil.js"></script>
+
 </html>
