--- a/pages/argentina/players.html
+++ b/pages/argentina/players.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,12 @@
     <title>Jogadores Argentina</title>
     <link rel="stylesheet" href="../../styles/argentina.css">
 </head>
+
 <body>
     <header class="navBar">
         <section class="navImage">
-            <a href="../../home.html"><img src="../../images/logo_semsite_semfundo (1).png" alt="logo da Flit" width="150"></a>
+            <a href="../../home.html"><img src="../../images/logo_semsite_semfundo (1).png" alt="logo da Flit"
+                    width="150"></a>
         </section>
         <section class="navPages">
             <a href="../../home.html">Home</a>
@@ -18,6 +21,24 @@
             <a href="../../cadastro.html">Cadastrar</a>
         </section>
     </header>
-    <a class="backButton" href="./index.html">Voltar</a>
+    <section class="players">
+        <div class="position">
+            <h2>Goleiros</h2>
+        </div>
+        <div class="position">
+            <h2>Defensores</h2>
+        </div>
+        <div class="position">
+            <h2>Meio-Campistas</h2>
+        </div>
+        <div class="position">
+            <h2>Atacantes</h2>
+        </div>
+    </section>
+    <section class="backButtonSection">
+        <a class="backButton" href="./index.html">Voltar</a>
+    </section>
+
 </body>
+<script src="../../dist/pages/argentina/players.js"></script>
 </html>
