integração da API de jogadores com a página de jogadores da Argentina

--- a/pages/argentina/players.html
+++ b/pages/argentina/players.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogadores Argentina</title>
-    <link rel="stylesheet" href="../../styles/argentina.css">
+    <link rel="stylesheet" href="../../styles/argentinaPlayers.css">
 </head>
 
 <body>
@@ -24,21 +24,34 @@
     <section class="players">
         <div class="position">
             <h2>Goleiros</h2>
+            <div class="playersCards" id="goalkeepers">
+
+            </div>
         </div>
         <div class="position">
             <h2>Defensores</h2>
+            <div class="playersCards" id="defenders">
+
+            </div>
         </div>
         <div class="position">
             <h2>Meio-Campistas</h2>
+            <div class="playersCards" id="midfielders">
+
+            </div>
         </div>
         <div class="position">
             <h2>Atacantes</h2>
+            <div class="playersCards" id="attackers">
+
+            </div>
         </div>
     </section>
+
     <section class="backButtonSection">
         <a class="backButton" href="./index.html">Voltar</a>
     </section>
-
 </body>
 <script src="../../dist/pages/argentina/players.js"></script>
+
 </html>
