implementando setas na página de jogadores da Argentina

--- a/pages/argentina/index.html
+++ b/pages/argentina/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,12 @@
     <title>Argentina</title>
     <link rel="stylesheet" href="../../styles/argentina.css">
 </head>
+
 <body>
     <header class="navBar">
         <section class="navImage">
-            <a href="../../home.html"><img src="../../images/logo_semsite_semfundo (1).png" alt="logo da Flit" width="150"></a>
+            <a href="../../home.html"><img src="../../images/logo_semsite_semfundo (1).png" alt="logo da Flit"
+                    width="150"></a>
         </section>
         <section class="navPages">
             <a href="../../home.html">Home</a>
@@ -32,25 +35,43 @@
         </div>
     </section>
     <section class="matchResults">
-        <div class="groupStage matchBox">
-            <h3>Classificatórias</h3>
-            <div id=matchScores>
+        <div id="groupStage">
+            <div id="groupBox">
+                <h3>Fase de Grupo</h3>
                 <div class="score">
-                    <span>Argentina X Arábia Saudita</span>
+                    <p>Argentina X Arábia Saudita</p>
                     <p>1 X 2</p>
                 </div>
-                <button id="matchButton">Ver Mais</button>
-                <div class="score">
-                    <span>Argentina X México</span>
-                    <p>2 X 0</p>
+                <div class="groupBut">
+                    <button id="groupButton">Ver Mais</button>
                 </div>
                 <div class="score">
-                    <span>Argentina X Arábia Saudita</span>
+                    <p>Argentina X Arábia Saudita</p>
                     <p>1 X 2</p>
                 </div>
+                <div class="score">
+                    <p>Argentina X Arábia Saudita</p>
+                    <p>1 X 2</p>
+                </div>
+            </div>
+        </div>
+
+        <div id="last16">
+
+        </div>
+
+        <div id="quarterFinals">
+
+        </div>
+
+        <div id="semiFinals">
+        </div>
+
+        <div id="final">
             </div>
         </div>
     </section>
 </body>
 <script src="../../dist/pages/argentina/index.js"></script>
+
 </html>
