--- a/pages/argentina/players.html
+++ b/pages/argentina/players.html
@@ -28,23 +28,57 @@
 
             </div>
         </div>
+        </div>
         <div class="position">
             <h2>Defensores</h2>
+            <div>
+                <button class="arrow" id="defenderLeftArrow">
+                    <img src="../../images/left-arrow.png" alt="Seta Esquerda">
+                </button>
+            </div>
             <div class="playersCards" id="defenders">
 
             </div>
+            <div>
+                <button class="arrow" id="defenderRightArrow">
+                    <img src="../../images/right-arrow.png" alt="Seta Direita">
+                </button>
+            </div>
+        </div>
         </div>
         <div class="position">
             <h2>Meio-Campistas</h2>
+            <div>
+                <button class="arrow" id="midfielderLeftArrow">
+                    <img src="../../images/left-arrow.png" alt="Seta Esquerda">
+                </button>
+            </div>
+
             <div class="playersCards" id="midfielders">
 
+            </div>
+            <div>
+                <button class="arrow" id="midfielderRightArrow">
+                    <img src="../../images/right-arrow.png" alt="Seta Direita"> 
+                </button>
             </div>
         </div>
         <div class="position">
             <h2>Atacantes</h2>
+            <div>
+                <button class="arrow" id="attackerLeftArrow">
+                    <img src="../../images/left-arrow.png" alt="Seta Esquerda">
+                </button>
+            </div>
             <div class="playersCards" id="attackers">
 
             </div>
+            <div>
+                <button class="arrow" id="attackerRightArrow"> 
+                    <img src="../../images/right-arrow.png" alt="Seta Direita">
+                </button>
+            </div>
+        </div>
         </div>
     </section>
 
