deixando as páginas da Argentina, home e cadastro responsivas

--- a/cadastro.html
+++ b/cadastro.html
@@ -19,7 +19,17 @@
             <a href="pages/brasil/index.html">Jogos</a>
             <a href="cadastro.html">Cadastrar</a>
         </section>
+        <div class="mobile-menu-icon">
+            <button id="menuButton"><img class="icon" src="./images/menu.png" alt="Símbolo do Menu"></button>  
+        </div>
     </header>
+
+    <div class="mobileMenu">
+        <a href="home.html">Home</a>
+        <a href="pages/brasil/index.html">Jogos</a>
+        <a href="cadastro.html">Cadastrar</a>
+    </div>
+
     <form>
         <label for="nationalTeam">Seleção:</label>
         <input type="text" id="nationalTeam" placeholder="Ex: Brasil">
