--- a/home.html
+++ b/home.html
@@ -17,7 +17,16 @@
             <a href="pages/brasil/index.html">Jogos</a>
             <a href="cadastro.html">Cadastrar</a>
         </section>
+        <div class="mobile-menu-icon">
+            <button id="menuButton"><img class="icon" src="./images/menu.png" alt="Símbolo do Menu"></button>  
+        </div>
     </header>
+    <div class="mobileMenu">
+        <a href="home.html">Home</a>
+        <a href="pages/brasil/index.html">Jogos</a>
+        <a href="cadastro.html">Cadastrar</a>
+    </div>
+
     <main class="content">
         <div class="flags">
             <a href="pages/brasil/index.html"><img src="images/brasil.jpg" alt="bandeira do Brasil" width="200"></a>
@@ -34,4 +43,5 @@
         </div>
     </footer>
 </body>
+<script src="dist/home.js"></script>
 </html>
