--- a/pages/argentina/index.html
+++ b/pages/argentina/index.html
@@ -12,15 +12,24 @@
 <body>
     <header class="navBar">
         <section class="navImage">
-            <a href="../../home.html"><img src="../../images/logo_semsite_semfundo (1).png" alt="logo da Flit"
-                    width="150"></a>
+            <a href="../../home.html"><img src="../../images/logo_semsite_semfundo (1).png" alt="logo da Flit" width="150"></a>
         </section>
         <section class="navPages">
             <a href="../../home.html">Home</a>
             <a href="../brasil/index.html">Jogos</a>
             <a href="../../cadastro.html">Cadastrar</a>
         </section>
+        <div class="mobile-menu-icon">
+            <button id="menuButton"><img class="icon" src="../../images/menu.png" alt="Símbolo do Menu"></button>  
+        </div>
     </header>
+
+    <div class="mobileMenu">
+        <a href="home.html">Home</a>
+        <a href="pages/brasil/index.html">Jogos</a>
+        <a href="cadastro.html">Cadastrar</a>
+    </div>
+
     <section class="options">
         <div class="button">
             <a href="../brasil/index.html">Anterior</a>
@@ -38,20 +47,9 @@
         <div id="groupStage">
             <div id="groupBox">
                 <h3>Fase de Grupo</h3>
-                <div class="score">
-                    <p>Argentina X Arábia Saudita</p>
-                    <p>1 X 2</p>
-                </div>
                 <div class="groupBut">
                     <button id="groupButton">Ver Mais</button>
                 </div>
-                <div class="score">
-                    <p>Argentina X Arábia Saudita</p>
-                    <p>1 X 2</p>
-                </div>
-                <div class="score">
-                    <p>Argentina X Arábia Saudita</p>
-                    <p>1 X 2</p>
                 </div>
             </div>
         </div>
