--- a/pages/brasil/index.html
+++ b/pages/brasil/index.html
@@ -17,7 +17,15 @@
             <a href="index.html">Jogos</a>
             <a href="../../cadastro.html">Cadastrar</a>
         </section>
+        <div class="mobile-menu-icon">
+            <button id="menuButton"><img class="icon" src="../../images/menu.png" alt="Símbolo do Menu"></button>  
+        </div>
     </header>
+    <div class="mobileMenu">
+        <a href="home.html">Home</a>
+        <a href="pages/brasil/index.html">Jogos</a>
+        <a href="cadastro.html">Cadastrar</a>
+    </div>
     <section class="menu">
         <section>
             <a href="../argentina/index.html"><button class="menuButton">Anterior</button></a>
