--- a/pages/brasil/players.html
+++ b/pages/brasil/players.html
@@ -20,7 +20,15 @@
             <a href="index.html">Jogos</a>
             <a href="../../cadastro.html">Cadastrar</a>
         </section>
+        <div class="mobile-menu-icon">
+            <button id="menuButton"><img class="icon" src="../../images/menu.png" alt="Símbolo do Menu"></button>  
+        </div>
     </header>
+    <div class="mobileMenu">
+        <a href="home.html">Home</a>
+        <a href="pages/brasil/index.html">Jogos</a>
+        <a href="cadastro.html">Cadastrar</a>
+    </div>
     <section class="menu">
         <section class="countryMenu">
             <img src="../../images/brasil.jpg" alt="bandeira do Brasil" width="200">
