--- a/pages/brasil/index.html
+++ b/pages/brasil/index.html
@@ -37,7 +37,7 @@
                 <a href="players.html"><button class="menuButton">Ver Jogadores</button></a>
             </div>
         </section>
-        <section >
+        <section>
             <a href="../argentina/index.html"><button class="menuButton">Próximo</button></a>
         </section>
     </section>
@@ -47,7 +47,7 @@
             <p id="scoreFirstClassification"></p>
         </div>
         <div>
-            <h1>Classificatórias</h1>
+            <h1 class="titleQualifying">Classificatórias</h1>
             <button class="buttonMore" id="buttonMore">Ver Mais</button>
             <div class="scoreboard scoreboardHidden" id="scoreboardHidden">
                 <p id="teamThirdClassification"></p><br>
@@ -60,14 +60,14 @@
         </div>
     </section>
     <section class="penultimateGame">
-        <h1>Oitavas de final</h1>
+        <h1 class="titleQualifying">Oitavas de final</h1>
         <div class="scoreboard"> 
             <p id="teamPenultimateGame"></p><br>
             <p id="scorePenultimateGame"></p>
         </div>
     </section>
     <section class="lastGame">
-        <h1>Quartas de final</h1>
+        <h1 class="titleQualifying">Quartas de final</h1>
         <div class="scoreboard"> 
             <p id="teamLastGame"></p><br>
             <p id="scoreLastGame"></p>
