criação da função de filtro na página de jogadores da Argentina

--- a/pages/argentina/players.html
+++ b/pages/argentina/players.html
@@ -30,6 +30,15 @@
         <a href="cadastro.html">Cadastrar</a>
     </div>
 
+    <section class="filter">
+        <form>
+            <label for="minAge">Idade Mínima:</label>
+            <input id="minAge" type="text">
+            <label for="maxAge">Idade Máxima:</label>
+            <input id="maxAge" type="text">
+        </form>
+    </section>
+
     <section class="players">
         <div class="position">
             <h2>Goleiros</h2>
