--- a/pages/argentina/index.html
+++ b/pages/argentina/index.html
@@ -22,53 +22,44 @@
         <div class="mobile-menu-icon">
             <button id="menuButton"><img class="icon" src="../../images/menu.png" alt="Símbolo do Menu"></button>  
         </div>
+        <div class="mobileMenu">
+            <a href="../../home.html">Home</a>
+            <a href="../../pages/brasil/index.html">Jogos</a>
+            <a href="../../cadastro.html">Cadastrar</a>
+        </div>
     </header>
 
-    <div class="mobileMenu">
-        <a href="home.html">Home</a>
-        <a href="pages/brasil/index.html">Jogos</a>
-        <a href="cadastro.html">Cadastrar</a>
-    </div>
-
-    <section class="options">
-        <div class="button">
-            <a href="../brasil/index.html">Anterior</a>
-        </div>
-        <div class="nationalTeam">
-            <img src="../../images/argentina.jpg" alt="Banderia da Argentina">
-            <span>Argentina</span>
-            <a href="players.html">Ver jogadores</a>
-        </div>
-        <div class="button">
-            <a href="../brasil/index.html">Próximo</a>
-        </div>
-    </section>
-    <section class="matchResults">
-        <div id="groupStage">
-            <div id="groupBox">
-                <h3>Fase de Grupo</h3>
-                <div class="groupBut">
-                    <button id="groupButton">Ver Mais</button>
-                </div>
+    <main>
+        <section class="options">
+            <div class="button">
+                <a href="../brasil/index.html">Anterior</a>
+            </div>
+            <div class="nationalTeam">
+                <img src="../../images/argentina.jpg" alt="Banderia da Argentina">
+                <span>Argentina</span>
+                <a href="players.html">Ver jogadores</a>
+            </div>
+            <div class="button">
+                <a href="../brasil/index.html">Próximo</a>
+            </div>
+        </section>
+        <section class="matchResults">
+            <div id="groupStage">
+                <div id="groupBox">
+                    <h3>Fase de Grupo</h3>
+                    <div class="groupBut">
+                        <button id="groupButton">Ver Mais</button>
+                    </div>
+                    </div>
                 </div>
             </div>
-        </div>
+    
+            <div id="knockoutBox">
 
-        <div id="last16">
-
-        </div>
-
-        <div id="quarterFinals">
-
-        </div>
-
-        <div id="semiFinals">
-        </div>
-
-        <div id="final">
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
+
 </body>
 <script src="../../dist/pages/argentina/index.js"></script>
 
